fix(core): accept null-value params
The semantic validator emits null values for slots it could not extract; Map.copyOf rejects such params and ValidationPipeline exploded with NPE when a rejection carried partial params. Tolerate null values via an unmodifiable LinkedHashMap and cover the contract in ContentValidationExceptionTest.

Signed-off-by: qinyanhao01 <qinyanhao1@huawei.com>