@@ -1,5 +1,8 @@
 package net.openan.a2at.sdk.core.validation;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -58,18 +61,24 @@ public class ContentValidationException extends A2ATError {
     }
 
     /**
-     * Creates a content validation failure with an error code, one message, slot details and a root cause.
+     * Creates a content validation failure with an error code, one message, slot details, partial extraction params and
+     * a root cause.
+     *
+     * <p>{@code params} carries the extraction result produced before rejection; the semantic validator deliberately
+     * emits {@code null} values for slots it could not extract, so both the map and its values may be {@code null} and
+     * must be accepted defensively. The stored copies are unmodifiable and preserve the original ordering.
      *
      * @param code machine-readable error code for the failure
      * @param message failure message
      * @param errors structured per-slot validation error details
+     * @param params partial extraction params, may carry {@code null} values
      * @param cause root cause
      */
     public ContentValidationException(
             String code, String message, List<SlotValidationError> errors, Map<String, Object> params, Throwable cause) {
         super(code, message, cause);
-        this.errors = errors == null ? List.of() : List.copyOf(errors);
-        this.params = params == null ? Map.of() : Map.copyOf(params);
+        this.errors = errors == null ? List.of() : Collections.unmodifiableList(new ArrayList<>(errors));
+        this.params = params == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(params));
     }
 
     /**
@@ -81,6 +90,12 @@ public class ContentValidationException extends A2ATError {
         return errors;
     }
 
+    /**
+     * Returns the partial extraction params captured before rejection.
+     *
+     * @return unmodifiable map preserving insertion order, never null; values may be {@code null} for slots the
+     *     semantic validator could not extract
+     */
     public Map<String, Object> params() {
         return params;
     }
